[package]
name = "SOEM-sys"
version = "0.2.0"
authors = ["Matwey V. Kornilov <matwey.kornilov@gmail.com>"]
license = "GPL-2.0-only"
description = "Rust FFI bindings for SOEM"
documentation = "http://docs.rs/SOEM-sys"
repository = "https://github.com/matwey/SOEM-sys"
readme = "README.md"
build = "build.rs"


[badges]
travis-ci = { repository = "matwey/SOEM-sys", branch = "master" }

[dependencies]

[build-dependencies]
cmake = "0.1"
bindgen = "0.59.2"
